--- a/text/references.bib
+++ b/text/references.bib
@@ -451,3 +451,25 @@
   doi = {10.1038/s41586-020-2329-2},
   pmid = {32461655}
 }
+
+@article{PCAWG-MAIN,
+  author = {Consortium},
+  title = {Pan-cancer analysis of whole genomes},
+  journal = {Nature},
+  year = {2020},
+  volume = {578},
+  pages = {82--104},
+  pmid = {32025007},
+  doi = {10.1038/s41586-020-1969-6}
+}
+
+@article{PCAWG-EVO,
+  author = {Gerstung, M. and Jolly, C. and Leshchiner, I. and Dentro, S.C. and Gonzalez, S. and Rosebrock, D. and Mitchell, T.J. and Rubanova, Y. and Anur, P. and Yu, K. and Tarabichi, M. and Deshwar, A. and Wintersinger, J. and Kleinheinz, K. and Vázquez-García, I. and Haase, K. and Jerman, L. and Sengupta, S. and Macintyre, G. and Malikic, S. and Donmez, N and Livitz, D.G. and Cmero, M. and Demeulemeester, J. and Schumacher, S. and Fan, Y. and Yao, K. and Lee, J. and Schlesner, M. and Boutros, P.C. and Bowtell, D.D. and Zhu, H. and Getz, G. and Imielinski, M. and Beroukhim, R. and Sahinalp, S.C. and Ji, Y. and Peifer, M. and Markowetz, F. and Mustonen, V. and Yuan, K. and Wang, W. and Morris, Q.D. and PCAWG Evolution & Heterogeneity Working Group and Spellman, P.T. and Wedge, D.C, and Van Loo, P. and PCAWG Consortium},
+  title = {The evolutionary history of 2,658 cancers},
+  journal = {Nature},
+  year = {2020},
+  volume = {578},
+  pages = {122--128},
+  pmid = {32025013},
+  doi = {10.1038/s41586-019-1907-7}
+}
