--- a/text/references.bib
+++ b/text/references.bib
@@ -473,3 +473,14 @@
   pmid = {32025013},
   doi = {10.1038/s41586-019-1907-7}
 }
+
+@article{PATHNET,
+  author = {Creixell, P. and Reimand, J. and Haider, S. and Wu, G. and Shibata, T. and Vazquez, M. and Mustonen, V. and Gonzalez-Perez, A. and Pearson, J. and Sander, C. and Raphael, B.J. and Marks, D.S. and Ouellette, B.F.F. and Valencia, A. and Bader, G.D. and Boutros, P.C. and Stuart, J.M. and Linding,
+R. and Lopez-Bigas, N. and Stein L.D. and the Mutation Consequences & Pathway Analysis working group of the International Cancer Genome Consortium},
+  title = {Pathway and network analysis of cancer genomes},
+  journal = {Nature methods},
+  year = {2015},
+  volume = {12},
+  number = {7},
+  pages = {615--621}
+}
