--- a/code/figure2.Rmd
+++ b/code/figure2.Rmd
@@ -3,6 +3,7 @@
 library(ggplot2)
 library(patchwork)
 library(tidyverse)
+library(cowplot)
 ```
 
 ```{r oncoprint-top100-plus-panel-data-generation, eval = FALSE}
@@ -140,7 +141,8 @@ alter_fun = list(
 save(clust_col_order, path_row_order, file = "onco_clust.Rda")
 ```
 
-```{r figure-2-plot, fig.width=72, fig.height=60, fig.cap="Figure 2: Pan-cancer enrichment of pathway disruptions. Waterfall plot; columns represent tumors. Each row represents a pathway. The pathways are ranked such that the pathway with the most disruptions across all 7,607 tumors is the first row _etc._ and tumors are ordered to prioritize the top pathway disruptions successively. All 377 pathways are shown. Red signifies pathway disrupted pathways, grey signifies not disrupted."}
+```{r figure-2-plot, out.height='90%', out.width='90%',fig.cap="Figure 2: Pan-cancer enrichment of pathway disruptions. Waterfall plot; columns represent tumors. Each row represents a pathway. The pathways are ranked such that the pathway with the most disruptions across all 7,607 tumors is the first row _etc._ and tumors are ordered to prioritize the top pathway disruptions successively. All 377 pathways are shown. Red signifies pathway disrupted pathways, grey signifies not disrupted."}
+
 ## top100 pathways pancancer oncoprint
 load("../data/onco_ggplot.Rda") ## load data
 onco_color <- c("0" = "grey", "1" = "firebrick3") ## color scheme for oncoprint
@@ -149,198 +151,102 @@ fig2A <- ggplot(data = onco_ggplot, aes(x=sample_id, y=path_name)) +
   geom_tile(aes(fill = as.character(mutation_status))) +
   scale_fill_manual(values = onco_color) +
   theme_classic() +
+  xlab("Pan-Cancer (n=7,607 tumor samples)") +
+  ylab("377 pathways") +
   theme(axis.text.x = element_blank(),
         axis.text.y = element_blank(),
-        axis.title.x = element_blank(),
-        axis.title.y = element_blank(),
-        plot.title = element_text(hjust = 0.5, size = 60),
-        plot.tag = element_text(size = 48, hjust = 0, vjust = 0),
+        axis.title.x = element_text(size = 10),
+        axis.title.y = element_text(size = 10),
+        #plot.tag = element_text(size = 8, hjust = 0, vjust = 0),
         axis.ticks = element_blank(),
         axis.line = element_blank(),
-        legend.position = "none") +
-  ggtitle("Pan-Cancer")
+        legend.position = "none")
 
-load("../barplot_pathways_fig2b.rda")
-fig2B <- pathway_counts %>% ggplot(aes(x = pathway, y = proportion, fill = color)) +
+load("../data/effect_heatmap.Rda") ## load data
+effect_colors = c("1" = "#2d004b", "2" = "#542788", "3" = "#8073ac", "4" = "#b2abd2", "5" = "#d8daeb", "6" = "white", "7" = "#fee0b6", "8" = "#fdb863", "9" = "#e08214","10" = "#b35806","11" ="#7f3b08") ## color scheme
+
+guide_axis_label_trans <- function(label_trans = identity, ...) {
+  axis_guide <- guide_axis(...)
+  axis_guide$label_trans <- rlang::as_function(label_trans)
+  class(axis_guide) <- c("guide_axis_trans", class(axis_guide))
+  axis_guide
+}
+
+guide_train.guide_axis_trans <- function(x, ...) {
+  trained <- NextMethod()
+  trained$key$.label <- x$label_trans(trained$key$.label)
+  trained
+}
+
+fig2B <- ggplot(data = effect_heatmap, aes(y = cluster, x = path_name)) +
+  geom_tile(size = 1, aes(fill = effect_size)) +
+  scale_fill_fermenter(
+    type = "div",
+    palette = "PuOr",
+    n.breaks = 12,
+    limits = c(-1, 1),
+    name = "Effect Size",
+    labels = c(-1, "", 0.5, "", "", 0, "", "", 0.5, "", 1)
+  ) +
+  facet_wrap(~cluster, ncol = 1, strip.position = "right", scales = "free_y") +
+  guides(fill = guide_colorsteps(title.position = "top", title.hjust = 0.5)) +
+  xlab("377 pathways, ward.D2 clustered") +
+  ylab("Clusters") +
+  scale_x_discrete(position = "top") +
+  guides(y.sec = guide_axis_label_trans(~ paste(.x))) +
+  theme(
+    axis.text.x = element_blank(),
+    axis.text.y = element_blank(),
+    axis.title.x = element_text(size = 10),
+    axis.title.y = element_text(size = 10),
+    axis.ticks = element_blank(),
+    strip.text.y = element_text(size = 10, hjust = .5),
+    strip.text.y.right = element_text(angle = 0),
+    strip.background = element_blank(),
+    panel.background = element_blank(),
+    panel.spacing = unit(0, "lines"),
+    legend.position = "bottom",
+    legend.key.height = unit(0.3, "lines"),
+    legend.text = element_text(size = 5),
+    legend.title = element_text(size = 5),
+    legend.margin=margin(0,0,0,0),
+    legend.box.margin=margin(-10,-10,0,-10)
+  )
+
+load("../data/barplot_pathways_fig2b.rda")
+fig2C <- pathway_counts %>% ggplot(aes(x = pathway, y = proportion, fill = color)) +
   geom_col() +
   facet_wrap(~clust_knn, ncol = 1, strip.position = "right") +
-  ylab("Proportion of samples mutated in pathway") +
-  xlab("Pathways enriched with mutations within clusters") +
+  ylab("Proportion of mutated samples") +
+  xlab("Significant pathways") +
   theme_classic() +
   scale_fill_manual(values = bp.cluster.colors) +
   theme(
     axis.text.x = element_blank(),
     axis.text.y = element_blank(),
-    axis.title.x = element_text(size = 12),
-    axis.title.y = element_text(size = 12),
+    axis.title.x = element_text(size = 10),
+    axis.title.y = element_text(size = 10),
     axis.ticks = element_blank(),
-    strip.text.y = element_text(size = 12, hjust = .5),
+    axis.line = element_blank(),
+    #strip.text.y = element_text(size = 10, hjust = .5),
+    #plot.tag = element_text(size = 12, hjust = 0, vjust = 0),
     strip.text.y.right = element_text(angle = 0),
     strip.background = element_blank(),
     legend.position = "none"
-  )
+  ) #+ 
+  ggtitle("Cluster-specific enrichment score")
 
-fig2B_rotate <- pathway_counts %>% ggplot(aes(y = pathway, x = proportion, fill = color)) +
-  geom_col() +
-  facet_wrap(~clust_knn, nrow = 1, strip.position = "top") +
-  xlab("Proportion of samples mutated in pathway") +
-  ylab("Pathways enriched with mutations within clusters") +
-  theme_classic() +
-  scale_fill_manual(values = bp.cluster.colors) +
-  theme(
-    axis.text.x = element_blank(),
-    axis.text.y = element_blank(),
-    axis.title.x = element_text(size = 12),
-    axis.title.y = element_text(size = 12),
-    axis.ticks = element_blank(),
-    strip.text.x = element_text(size = 12, hjust = .5),
-    strip.background = element_blank(),
-    legend.position = "none"
-  )
 
-## top10 pathways for each cluster
-load("../data/onco_clust.Rda") ## load in data
-load("../data/gdc_reactome_path_analysis.Rda")
-
-plots_onco <- list() ## creating a list to store all the ggplots in the for loop below
-onco_color <- c("0" = "grey", "1" = "firebrick3") ## color scheme for oncoprint
-for(n in 1:length(clust_col_order)) {
-  onco_ggplot <- gdc_reactome_path_analysis %>% .[rownames(.) %in% path_row_order[[n]],] %>% ## only include the top 10 paths
-  .[,names(.) %in% clust_col_order[[n]]] %>% ## only include specific tumor class
-  rownames_to_column(var = "path_name") %>% ## path_name to col
-  gather(., key = "sample_id", value = "mutation_status", -path_name) %>% ## wide to long format
-  mutate(path_name = factor(.$path_name, levels = c(rev(path_row_order[[n]]))), ## factor to force oncoprint order
-         sample_id = factor(.$sample_id, levels = c(clust_col_order[[n]])))
-  plots_onco[[n]] <- ggplot(data = onco_ggplot, aes(x=sample_id, y=path_name)) + ## ggplot code
-  geom_tile(aes(fill = as.character(mutation_status))) +
-  scale_fill_manual(values = onco_color) +
-  theme_classic() +
-  theme(axis.text.x = element_blank(),
-        axis.text.y = element_blank(),
-        axis.title.x = element_blank(),
-        axis.title.y = element_blank(),
-        plot.title = element_text(hjust = 0.5, size = 60),
-        axis.ticks = element_blank(),
-        axis.line = element_blank(),
-        plot.tag = element_text(size = 48, hjust = 0, vjust = 0),
-        legend.position = "none") +
-  ggtitle(paste0("Class ", n))
-}
-
-## setting patchwork panel layout
 layout <- '
-AABCD
-AABCD
-AABCD
-AAEFG
-AAEFG
-AAEFG
-AAHIJ
-AAHIJ
-AAHIJ
-AAKLM
-AAKLM
-AAKLM
+AAABBBB
+AAABBBB
+AAABBBB
+AAACCCC
+AAACCCC
+AAACCCC
+AAACCCC
 '
 
-fig2A + plots_onco[[1]] + plots_onco[[2]] + plots_onco[[3]] + plots_onco[[4]] + plots_onco[[5]] + plots_onco[[6]] + plots_onco[[7]] + plots_onco[[8]] + plots_onco[[9]] + plots_onco[[10]] + plot_layout(design = layout) + plot_annotation(tag_levels = "A")
-```
-## oncoprint style of union set pathways
-```{r, eval = FALSE}
-tumor_clusters <- fread("../data/umap_3d_coors.tsv") ## load in data
-load("../data/gdc_reactome_path_analysis.Rda")
-
-## getting the top 5 pathways from each cluster
-n_toppaths <- 5
-
-toppaths <- list() ## list to store data
-for(n in 1:max(tumor_clusters$clust_knn)) {
-  spec_class <- tumor_clusters %>% filter(clust_knn == n) %>% .$sample_id
-  toppaths[[n]] <- gdc_reactome_path_analysis %>% .[, names(.) %in% spec_class] %>% 
-    rowSums() %>% as.data.frame() %>%
-    'colnames<-' ("Freq") %>%
-    rownames_to_column(var = "pathname") %>%
-    arrange(desc(Freq)) %>%
-    mutate(clust = n) %>% .[1:n_toppaths,]
-}
-
-toppaths <- as.data.frame(do.call(rbind, toppaths))
-## union set of the top pathways from each cluster
-union_toppaths <- unique(toppaths$pathname)
-
-clust_col_order1 <- list()
-path_row_order1 <- list()
-
-for(n in 1:max(tumor_clusters$clust_knn)) {
-  class_spec_sample_id <- tumor_clusters %>% .[,c("sample_id", "clust_knn")] %>% filter(clust_knn == n) %>% .[,.$sample_id] ## get class spec sample ids
-  top10path <- gdc_reactome_path_analysis[union_toppaths, class_spec_sample_id]
-  top10path[top10path == "1"] <- "MUT" ## categorize boolean values
-  top10path[top10path == "0"] <- " "
-  col <- c("MUT" = "firebrick3")
-heatmap_legend <- list(title = "", at = c("MUT"),
-                       labels = c("Mutation"))
-alter_fun = list(
-    background = function(x, y, w, h) {
-        grid.rect(x, y, w-unit(0.5, "mm"), h-unit(0.5, "mm"), 
-            gp = gpar(fill = "#CCCCCC", col = NA))
-    },
-    # bug red
-    MUT = function(x, y, w, h) {
-        grid.rect(x, y, w-unit(0.5, "mm"), h-unit(0.5, "mm"), 
-            gp = gpar(fill = col["MUT"], col = NA))
-    })
-  column_title <- "test"
-  onco_res <- oncoPrint(top10path,
-    alter_fun = alter_fun, col = col,
-    column_title = column_title, heatmap_legend_param = heatmap_legend,
-    remove_empty_columns = F, remove_empty_rows = F, right_annotation = NULL,
-    top_annotation = NULL
-    )
-  clust_col_order1[[n]] <- names(top10path[,onco_res@column_order])
-  path_row_order1[[n]] <- rownames(top10path[onco_res@row_order,])
-}
-
-save(clust_col_order1, path_row_order1, file = "../data/onco_clust1.Rda")
-
-## getting tumor sample orders 
-for(n in 1) {
-df <- as.data.frame(clust_col_order1[[n]])
-names(df) <- "sample_id"
-df$cluster <- n
-for(p in 2:length(clust_col_order1)) {
-  df1 <- as.data.frame(clust_col_order1[[p]])
-  names(df1) <- "sample_id"
-  df1$cluster <- p
-  df <- rbind(df, df1)
-  rm(df1)
-}
-}
-
-## setting up for ggplot geom_tile
-union_pathways_analysis <- gdc_reactome_path_analysis %>% .[rownames(.) %in% path_row_order1[[1]],] %>% 
-  t() %>% as.data.frame() %>% 
-  rownames_to_column(var = "sample_id") %>% 
-  gather(., key = path_name, value = "mutation_status", -sample_id) %>%
-  left_join(., tumor_clusters[,c("sample_id", "clust_knn")]) %>%
-  mutate(path_name = factor(.$path_name, levels = c(path_row_order1[[1]])), ## factor to force oncoprint order
-         sample_id = factor(.$sample_id, levels = c(rev(df$sample_id))))
-
-onco_color <- c("0" = "grey", "1" = "firebrick3") ## color scheme for oncoprint
-
-fig2_test <- ggplot(data = union_pathways_analysis, aes(y=sample_id, x=path_name)) + ## ggplot code
-  geom_tile(aes(fill = as.character(mutation_status))) +
-  scale_fill_manual(values = onco_color) +
-  theme_classic() +
-  theme(axis.text.x = element_blank(),
-        axis.text.y = element_blank(),
-        axis.title.x = element_blank(),
-        axis.title.y = element_blank(),
-        axis.ticks = element_blank(),
-        axis.line = element_blank(),
-        legend.position = "none") +
-  facet_grid(clust_knn ~ ., scales = "free", space = "free", switch = "y")
-ggsave("../data/fig2_test.png")
-
-
+fig2A + fig2B + fig2C + plot_layout(design = layout) + plot_annotation(tag_levels = "A")
 ```
 
